@@ -6,7 +6,7 @@ from . import html, image
 
 #Username and Password Global Dictionary
 accounts = {}
-accounts["ari"] = "yolo"
+accounts["justin"] = "yolo"
 current_user = '' 
 welcome_message = "No User Currently Logged In"
 comment_block = ''
@@ -33,21 +33,31 @@ class RootDirectory(Directory):
         print request.form.keys()
 
         the_file = request.form['file']
-        filetype = the_file.orig_filename.split('.')[1]
-        if(filetype == 'tif' or filetype == 'tiff'):
-            filetype = 'tiff'
-        elif(filetype == 'jpeg' or filetype == 'jpg'):
-            filetype == 'jpg'
-        else:
-            filetype == 'png'
-        print 'received file of type: ' + filetype
         print dir(the_file)
         print 'received file with name:', the_file.base_filename
-        data = the_file.read(int(1e9))
+        data = the_file.read(the_file.get_size())
 
-        image.add_image(data, filetype)
+        image.add_image(the_file.base_filename, data)
 
-        return quixote.redirect('./')
+        return html.render('index.html',globals())
+
+    @export(name='upload2')
+    def upload2(self):
+        return html.render('upload2.html')
+
+    @export(name='upload2_receive')
+    def upload2_receive(self):
+        request = quixote.get_request()
+        print request.form.keys()
+
+        the_file = request.form['file']
+        print dir(the_file)
+        print 'received file with name:', the_file.base_filename
+        data = the_file.read(the_file.get_size())
+
+        image.add_image(the_file.base_filename, data)
+
+        return html.render('upload2_received.html')
 
     @export(name='image')
     def image(self):
@@ -57,21 +67,31 @@ class RootDirectory(Directory):
     def image_raw(self):
         response = quixote.get_response()
         request = quixote.get_request()
-        try:
-            img = image.get_image(int(request.form['num']))
-        except KeyError:
-            img = image.get_latest_image()
-        response.set_content_type('image/%s' % img[1])
-        return img[0]
 
+        try:
+            i = int(request.form['num'])
+        except:
+            i = -1
+
+        img = image.retrieve_image(i)
+
+        filename = img.filename
+        if filename.lower() in ('jpg', 'jpeg'):
+            response.set_content_type('image/jpeg')
+        elif filename.lower() in ('tif',' tiff'):
+            response.set_content_type('image/tiff')
+        else: # Default to .png for reasons
+            response.set_content_type('image/png')
+        return img.data  
+ 
     @export(name = 'image_list')
     def image_list(self):
         return html.render('image_list.html')
 
     @export(name = 'image_count')
     def image_count(self):
-        return len(image.images)
-    
+        return image.get_num_images()
+ 
     @export(name='jquery')
     def jquery(self):
         return open('jquery-1.11.0.min.js').read()
@@ -162,4 +182,82 @@ class RootDirectory(Directory):
         comment_block += yolo_comment
         return html.render("image.html", globals())
 
+    @export(name='get_comments')
+    def get_comments(self):
+        response = quixote.get_response()
+        request = quixote.get_request()
 
+        try:
+            i = int(request.form['num'])
+        except:
+            i = -1
+
+        all_comments = []
+        for comment in image.get_comments(i):
+            all_comments.append("""\
+    <comment>
+     <text>%s</text>
+    </comment>
+    """ % (comment))
+
+        xml = """
+    <?xml version="1.0"?>
+    <comments>
+    %s
+    </comments>
+    """ % ("".join(all_comments))
+
+        return xml
+
+    @export(name='add_comment')
+    def add_comment(self):
+        response = quixote.get_response()
+        request = quixote.get_request()
+
+        try:
+            i = int(request.form['num'])
+        except:
+            i = -1
+
+        try:
+            comment = request.form['comment']
+        except:
+            return
+
+        image.add_comment(i, comment)
+
+    @export(name='get_score')
+    def get_score(self):
+        response = quixote.get_response()
+        request = quixote.get_request()
+
+        try:
+            i = int(request.form['num'])
+        except:
+            i = -1
+
+        return image.get_image_score(i)
+
+    @export(name='increment_score')
+    def increment_score(self):
+        response = quixote.get_response()
+        request = quixote.get_request()
+
+        try:
+            i = int(request.form['num'])
+        except:
+            i = -1
+
+        image.increment_image_score(i)
+
+    @export(name='decrement_score')
+    def decrement_score(self):
+        response = quixote.get_response()
+        request = quixote.get_request()
+
+        try:
+            i = int(request.form['num'])
+        except:
+            i = -1
+
+        image.decrement_image_score(i)
