@@ -4,15 +4,90 @@
 
 Here is your image:
 <p>
-<img width=40% src='image_raw?special=latest'/>
-<br>
+<img width=40% src='image_raw'/>
+<p>
+Score: <span id="score"></span>
+<p>
+<button id='upvote_button'>Upvote</button>
+<p>
+<button id='downvote_button'>Downvote</button>
+<p>
+<h2>Comments</h2>
+<ul id="comments">
+</ul>
+<input type="text" id='add_comment' />
+<button id="add_comment_button">Add Comment</button>
+<script type="text/javascript">
+var imageNum = window.location.href.split("?num=")[1]
 
-{{ comment_block }}
-<br>
+imageHtml = ''
 
-<form action='submit_comment' method='GET'>
-    <p>Comment: <input type='text' name='comment'></p>
-    <p><input type='submit' value='Submit'>
-</form></p>
+if($.isNumeric(imageNum)) {
+    imageHtml = "<img width=40% src='image_raw?num=" + imageNum + "' />"
+    console.log(imageHtml)
+} else {
+    // Just show the latest if they're a jerk and used a non numeric value
+    imageHtml = "<img width=40% src='image_raw?special=latest'/>"
+}
 
+$("#imageContainer").append(imageHtml)
+
+$.post("get_score?num=" + imageNum,
+    function(score) {
+        score = parseInt(score);
+        if (isNaN(score)){
+            $("#score").append(0)
+        }
+        else {
+            $("#score").append(score)
+        }
+        
+    });
+
+$.post("get_comments?num=" + imageNum,
+    function(xml) { 
+        console.log(imageNum)
+        console.log(xml)
+        $("comment", xml).each( function(id) {
+            comment = $("comment", xml).get(id)
+            $(comments).append("<li>" + ($("text", comment).text()) + "</li>")
+        });
+    });
+
+$("#add_comment_button").click(function() {
+    $.post("add_comment",
+        {
+            num        :   imageNum,
+            comment    :   $("#add_comment").val(),
+        })
+    .success(function(){
+        $("#comments").prepend("<li>" + $("#add_comment").val() + "</li>")
+        $("#add_comment").val('')
+    })
+});
+
+$("#upvote_button").click(function() {
+    console.log(imageNum);
+    $.post("increment_score?num=" + imageNum,
+        function() {
+        var score = $("#score").text()
+        score = parseInt(score)
+        score += 1
+        $("#score").empty()
+        $("#score").append(score)
+    });
+});
+
+$("#downvote_button").click(function() {
+    console.log(imageNum);
+    $.post("decrement_score?num=" + imageNum,
+        function() {
+        var score = $("#score").text()
+        score = parseInt(score)
+        score -= 1
+        $("#score").empty()
+        $("#score").append(score)
+    });
+});
+</script>
 {% endblock %}
