@@ -10,11 +10,12 @@
     $.post("image_count",
          function(count) { 
             count = parseInt(count);
-            for (var i = count - 1; i >= 0; i--) {
+            for (var i = count; i > 0; i--) {
                 $("#imageContainer").append("<div style='padding-top:10px'>" + 
-                    "<img width='200' src='image_raw?num=" + i + "' /></div>");
+                    "<a href='/image?num=" + i + "'>" +
+                    "<img width='200' src='image_raw?num=" + i + "' /></a></div>");
             }
          }
-     );
- </script>
- {% endblock %}
+    );
+</script>
+{% endblock %}
