@@ -5,6 +5,7 @@
 {{ welcome_message }}<br><br>
 
 <a href='upload'>Upload an image</a> <br>
+<a href='upload2'>Upload an image ver2</a> <br>
 <a href='image'>Show most recent image</a> <br>
 <a href='image_list'>All images</a> <br>
 <a href='login'>Account Management</a><br>
