@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-Upload a PNG, JPG, or TIFF:
+Upload an image (jpg, png, or tif)
 
 <form enctype='multipart/form-data' action='upload_receive' method='POST'>
 Filename: <input type='file' name='file'><p>
